Update Juego.java